--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+body {
+  background: rgb(87, 131, 86);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.m20 {
+  margin-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card {
+  margin: 10px;
+  font-size: 1.3rem;
+  border-radius: 10px;
+  padding: 10px;
+  background: rgb(240, 234, 222);
+  width: 85px;
+  height: 125px;
+  -webkit-box-shadow: 0px 0px 6px 0px #042f00;
+  box-shadow: 0px 0px 6px 0px #042f00;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.redSuit {
+  color: rgb(196, 31, 31);
+}
+
+.blackSuit {
+  color: rgb(79, 76, 74);
+}
+
+.centerAllFlex {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.flexColumn {
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cardHolder {
+  width: 100%;
+  padding: 0px 50px;
+  flex-wrap: wrap;
+}
+
+.buttonGroup {
+  width: 100%;
+}
+
+.lastCardInfo {
+  color: antiquewhite;
+  font-weight: 100;
+  font-size: 1.5rem;
 }
