--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,12 @@ body {
   font-weight: 100;
   font-size: 1.5rem;
 }
+
+@media only screen and (max-width: 760px) {
+
+  .card {
+    width: 45px;
+    height: 62px;
+  }
+
+}
